<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Reg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="364dp"
            android:layout_height="55dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/name"
            android:autofillHints=""
            android:paddingStart="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawablePadding="10dp"
            android:autofillHints=""
            android:paddingStart="10dp"
            android:drawableStart="@drawable/email"
            android:ems="10"
            android:hint="@string/enter_your_email_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="370dp"
            android:layout_height="55dp"
            android:background="@drawable/custom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/password"
            android:layout_margin="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="text" />

        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"

            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>